--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Yusei Magic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
 .App {
   text-align: center;
-  font-family: Yusei Magic ,sans-serif;
+  font-family: DotGothic16, sans-serif;
   background: #DEEEFA;
   min-height: 100vh; /* 画面全体に背景を適用 */
   color: #1C5B88;
