--- a/src/App.css
+++ b/src/App.css
@@ -25,26 +25,37 @@ html, body {
   }
 }
 
-/* ヘッダーを固定表示し、横幅を全体にする */
 .app-header {
-  position: fixed;        /* 固定表示 */
-  top: 0;                 /* 画面上部に固定 */
+  position: fixed;
+  top: 0;
   left: 0;
-  width: 100%;            /* 横幅いっぱいに */
-  height: 60px;           /* ヘッダーの高さ */
-  display: flex;          /* 横並びに要素を配置 */
-  align-items: center;    /* 縦方向の中央揃え */
-  background-color: #B4E0F8;/* 背景色など自由に設定 */
+  width: 100%;
+  height: 60px;
+  display: flex;         /* 横並び */
+  align-items: center;  
+  background-color: #B4E0F8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 0 20px;
-  z-index: 999;           /* コンテンツの上に重ねるためにz-indexを設定 */
+  z-index: 999;
 }
 
-/* アイコン画像のサイズ調整やスペースを追加 */
 .app-icon {
-  height: 40px; 
+  height: 40px;
   margin-right: 10px; 
 }
+
+/* ここが反映されるためには、ボタンに logout-button クラスが必要 */
+.logout-button {
+  display: flex; 
+  align-items: center;
+  position: absolute;
+  right: 20%; 
+  color:#1C5B88;
+  border: 1px solid #1C5B88;
+  border-radius: 6px;   
+  
+}
+
 
 /* アプリ名のスタイル */
 .app-title {
@@ -55,6 +66,7 @@ html, body {
 
 .h1 {
   color: #E6566C;
+  font-weight: 900;
 }
 
 /* 
@@ -226,10 +238,11 @@ nav ul {
 }
 
 .submit-button {
-  background: #007bff;
-  color: white;
+  background-color: #B4E0F8;
+  border: 2px solid #1C5B88;
+  color: #1C5B88;
+  font-family: DotGothic16, sans-serif;
   padding: 10px;
-  border: none;
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
@@ -241,6 +254,7 @@ nav ul {
 
 .submit-button:hover {
   background: #0056b3;
+  color: #fff;
 }
 
 .submit-button:disabled {
